# VectorQt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SELECTION_AND_TRANSFORM_ANALYSIS.md  SVG_SUPPORT_ANALYSIS.md  colorpalette.cpp  colorpalette.h  control-frame.cpp  cursor-manager.cpp  drawing-canvas.cpp  drawing-canvas.h  drawing-document.cpp  drawing-document.h  drawing-edit-handles.cpp  drawing-edit-handles.h  drawing-group.cpp  drawing-group.h  drawing-layer.cpp  drawing-layer.h  drawing-shape.cpp  drawing-shape.h  drawing-tool-base.cpp  drawing-tool-base.h  drawing-tool-bezier-edit.cpp  drawing-tool-bezier-edit.h  drawing-tool-bezier.cpp  drawing-tool-bezier.h  drawing-tool-brush.cpp  drawing-tool-brush.h  drawing-tool-eraser.h  drawing-tool-fill.cpp  drawing-tool-fill.h  drawing-tool-line.cpp  drawing-tool-line.h  drawing-tool-node-edit.cpp  drawing-tool-node-edit.h  drawing-tool-outline-preview.cpp  drawing-tool-outline-preview.h  drawing-tool-path-edit.cpp  (+46 more)
data/: README.md
data/svg-tests/: test_instructions.txt
data/temp/: .gitkeep
demo-build/: CMakeLists.txt
demo-build/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
demo-build/VectorFlow_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
demo-build/VectorFlow_autogen/EWIEGA46WW/: moc_colorpalette.cpp.d  moc_control-frame.cpp.d  moc_drawing-canvas.cpp.d  moc_drawing-document.cpp.d  moc_drawing-edit-handles.cpp.d  moc_drawing-tool-bezier-edit.cpp.d  moc_drawing-tool-bezier.cpp.d  moc_drawing-tool-brush.cpp.d  moc_drawing-tool-fill.cpp.d  moc_drawing-tool-line.cpp.d  moc_drawing-tool-node-edit.cpp.d  moc_drawing-tool-path-edit.cpp.d  moc_drawing-tool-polygon.cpp.d  moc_drawing-tool-polyline.cpp.d  moc_drawing-tool.cpp.d  moc_drawingscene.cpp.d  moc_drawingview.cpp.d  moc_graphics-adapter.cpp.d  moc_mainwindow.cpp.d  moc_patheditor.cpp.d  moc_propertypanel.cpp.d  moc_ruler.cpp.d  moc_selection-layer.cpp.d  moc_toolbase.cpp.d  qrc_icons.cpp
demo-build/VectorFlow_autogen/include/: colorpalette.moc.d  control-frame.moc.d  drawing-canvas.moc.d  drawing-document.moc.d  drawing-edit-handles.moc.d  drawing-tool-brush.moc.d  drawing-tool-fill.moc.d  drawing-tool-line.moc.d  drawing-tool-path-edit.moc.d  drawing-tool-polygon.moc.d  drawing-tool-polyline.moc.d  drawing-tool.moc.d  patheditor.moc.d  selection-layer.moc.d  toolbase.moc.d
src/core/: colorpalette.cpp  cursor-manager.cpp  drawing-group.cpp  drawing-group.h  drawing-layer.cpp  drawing-shape.cpp  drawing-shape.h  layer-manager.cpp  ruler.cpp  scrollable-toolbar.cpp  svghandler.cpp  toolbase.h
src/tools/: drawing-tool-fill.cpp  drawing-tool-gradient-fill.cpp  drawing-tool-node-edit.cpp  drawing-tool-outline-preview.cpp  drawing-tool-outline-preview.h  drawing-tool-pen.cpp
src/transforms/: handle-icons.cpp  handle-icons.h  handle-item.cpp  handle-item.h  node-handle-manager.cpp  node-handle-manager.h  transform-handle.cpp  transform-handle.h
src/ui/: drawingscene.cpp  drawingscene.h  layer-panel.cpp  mainwindow.cpp  mainwindow.h  propertypanel.cpp  tabbed-property-panel.cpp
test/: TRANSFORM_DEMO_README.md  main-transform-demo.cpp  simple-transform-demo.cpp  test-transform-components.cpp  test-transform-system.cpp  test-transform-system.pro  transform-demo.cpp  transform-demo.h  transform-demo.pro
